# renode-project

./: README.md  README.rd
16x16x1x4x1/dimension_aligned_ws_sta_16x16x1x4x1/bench/axi/: tb_axi_top_16x16.v
16x16x1x4x1/dimension_aligned_ws_sta_16x16x1x4x1/bench/basic/: tb_dimension_aligned_ws_sta_16x16x1x4x1.sv
16x16x1x4x1/dimension_aligned_ws_sta_16x16x1x4x1/schematic/axi/: script.ys
16x16x1x4x1/dimension_aligned_ws_sta_16x16x1x4x1/schematic/basic/: dimension_aligned_ws_sta_16x16x1x4x1.dot  script.ys
16x16x1x4x1/dimension_aligned_ws_sta_16x16x1x4x1/src/axi/: axi_top_16x16.v
16x16x1x4x1/dimension_aligned_ws_sta_16x16x1x4x1/src/basic/: dimension_aligned_ws_sta_16x16x1x4x1.sv  group_processing_element.sv  processing_element_256.sv  processing_element_960.sv
16x16x1x4x1/model/bench/basic/: tb_ws_sta_16x16x1x4x1.sv
16x16x1x4x1/renode/: platform_basic.repl  platform_basic.resc
16x16x1x4x1/renode/axi_sa_16x16/: CMakeLists.txt  sim_main.cpp
32x32x1x1x1/renode/: platform_basic.repl  platform_basic.resc
32x32x1x1x1/renode/axi_sa_32x32/: CMakeLists.txt
axi_test/code_test/sim/: run.sh  test.vcd
axi_test/code_test/src/: testbench.v
axi_test/sim/iverilog_test/: Makefile  test.out
axi_test/sim/renode_test/: platform_basic.repl  platform_basic.resc
cfu_test/build_test/: Makefile
cfu_test/sim/cfu_test/: dump.vcd
cfu_test/sim/iverilog_test/: dump.vcd
example_cfu_pim_v/: README.md  cfu.v
example_cfu_pim_v/src/: proj_menu.cc  software_cfu.cc
iree-rv32-springbok/build_tools/: build_riscv_compile_only.sh  build_riscv_new.sh  sim_springbok.sh  sim_springbok_axi.sh  sim_springbok_test.sh  sim_verilated_springbok.sh
iree-rv32-springbok/samples/util/: util.c
iree-rv32-springbok/sim/config/: springbok_axi_pim_test.resc  springbok_cfu_pim_test.resc
simple_pim/: README.md
simple_pim/example_cfu_pim_v/: README.md
simple_pim/example_cfu_pim_v/src/: software_cfu.cc
simple_pim/iree-rv32-springbok/build_tools/: download_iree_compiler.py
simple_pim/renode/cfu/: riscv_verilated_cfu_pim.repl  riscv_verilated_cfu_pim.resc
simple_pim/renode/renode_tool/src/Infrastructure/src/Emulator/Cores/tlib/softfloat-3/: .gitignore  CMakeLists.txt
springbok/build_tools/: build_riscv.sh
springbok/samples/ecg_small/: CMakeLists.txt  ecg_small.c  ecg_small_fp32.tflite
springbok/samples/util/: util.c
springbok/sim/config/: springbok_sa32_axi.resc
systolic_array/: README.md
systolic_array/16x16x1x4x1/renode/: platform_basic.repl
systolic_array/springbok/: requirements.txt
systolic_array/springbok/build_tools/: sim_springbok_sa16_axi.sh  sim_springbok_sa32_axi.sh
(+318 files in other folders)
